--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <img src="img/nlmk.png" alt="">
                     <img src="img/nlmk.png" alt="">
                     <img src="img/nlmk.png" alt="">
-                    <img src="img/nlmk.png" alt="">
+                    <img class="hiden" src="img/nlmk.png" alt="">
                     
                 </div>  
             </div>
@@ -341,8 +341,8 @@
                 <h2 class="title-2">Следите за последними новостями, обновлениями и вдохновляющим контентом на наших платформах.</h2>
             </div>
         </section>
-        <section class="Public">
-            <div class="Public_left element-animation">
+        <section class="Public element-animation">
+            <div class="Public_left">
                 <h4 class="title-4">Последние публикации</h4>
                 <div class="Public_left-all">
                     <div class="Public_left-item">
@@ -364,7 +364,7 @@
                 </div>
                 <button class="blog-btn">Блог</button>
             </div>
-            <div class="Public_rigth element-animation">
+            <div class="Public_rigth">
                 <div class="swiper mySwiper2">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide swiper-slide-two">
